sas-core/main/default/objects/Case/Case.object-meta.xml
<CustomObject>
</CustomObject>