sas-core/main/default/objects/Case/fields/Additional_PNRs__c.field-meta.xml
<CustomField>
    <fullName>Additional_PNRs__c</fullName>
    <label>Additional PNRs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>