sas-core/main/default/objects/Case/fields/Approval_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>