sas-core/main/default/objects/Case/fields/Asked_For_Help__c.field-meta.xml
<CustomField>
    <fullName>Asked_For_Help__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark case if question to team lead/mentor.</description>
    <label>Asked For Help</label>
    <type>Checkbox</type>
</CustomField>