sas-core/main/default/objects/Case/fields/CARE_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>CARE_Case_Number__c</fullName>
    <formula>Claim__r.CARE_Case_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CARE Case Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>