sas-core/main/default/objects/Case/fields/Case_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Case_Grouping__c</fullName>
    <description>Used to group cases in UI visibility for certain email to case types</description>
    <label>Case Visibility Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>