sas-core/main/default/objects/Case/fields/Case_Owner_Site__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Site__c</fullName>
    <formula>TEXT(Owner:User.FCS_Site__c)</formula>
    <label>Case Owner Site</label>
    <type>Text</type>
</CustomField>