sas-core/main/default/objects/Case/fields/CaseReason__c.field-meta.xml
<CustomField>
    <fullName>CaseReason__c</fullName>
    <complianceGroup>PIIExtract</complianceGroup>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>Airport Services</fullName>
            </value>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>ARI</fullName>
            </value>
            <value>
                <fullName>ATC/ATC Refund</fullName>
            </value>
            <value>
                <fullName>Availability / MCT</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Cancellation/refund of ticket</fullName>
            </value>
            <value>
                <fullName>Changes</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Code Share</fullName>
            </value>
            <value>
                <fullName>Corp Account managers (SAS for busiess)</fullName>
            </value>
            <value>
                <fullName>Credit card</fullName>
            </value>
            <value>
                <fullName>Delayed/damaged luggage</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Digital support</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Eurobonus</fullName>
            </value>
            <value>
                <fullName>Fare Quote</fullName>
            </value>
            <value>
                <fullName>Fare Rules</fullName>
            </value>
            <value>
                <fullName>Fares</fullName>
            </value>
            <value>
                <fullName>Flight disruptions</fullName>
            </value>
            <value>
                <fullName>Flight info</fullName>
            </value>
            <value>
                <fullName>Group booking - direct groups</fullName>
            </value>
            <value>
                <fullName>Inflight / Onboard</fullName>
            </value>
            <value>
                <fullName>Irregularity / Schedule change</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Name change</fullName>
            </value>
            <value>
                <fullName>New booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>