sas-core/main/default/objects/Case/fields/CaseSubReason__c.field-meta.xml
<CustomField>
    <fullName>CaseSubReason__c</fullName>
    <complianceGroup>WipeRetain</complianceGroup>
    <label>Case Sub-reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CaseReason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Add EB in booking</fullName>
            </value>
            <value>
                <fullName>Add infant in booking</fullName>
            </value>
            <value>
                <fullName>Allowance</fullName>
            </value>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>Arrival information</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>AVIH/PETC</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Baggage delivery</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>Booking confirmation</fullName>
            </value>
            <value>
                <fullName>BULK</fullName>
            </value>
            <value>
                <fullName>Campaign booking</fullName>
            </value>
            <value>
                <fullName>Cancellation/refund of ticket</fullName>
            </value>
            <value>
                <fullName>Card replacement</fullName>
            </value>
            <value>
                <fullName>Car rental</fullName>
            </value>
            <value>
                <fullName>CBBG</fullName>
            </value>
            <value>
                <fullName>Change profile</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Chat lost</fullName>
            </value>
            <value>
                <fullName>Check-in</fullName>
            </value>
            <value>
                <fullName>Co2</fullName>
            </value>
            <value>
                <fullName>Connections</fullName>
            </value>
            <value>
                <fullName>Connection time</fullName>
            </value>
            <value>
                <fullName>Content and Dangerous goods</fullName>
            </value>
            <value>
                <fullName>Control status</fullName>
            </value>
            <value>
                <fullName>Create case</fullName>
            </value>
            <value>
                <fullName>Customer hangs up</fullName>
            </value>
            <value>
                <fullName>Damaged baggage status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>