sas-core/main/default/objects/Case/fields/Claim_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Claim_Address_Line_1__c</fullName>
    <formula>LIA_Claim__r.Address_line_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Address Line 1</label>
    <type>Text</type>
</CustomField>