sas-core/main/default/objects/Case/fields/Claim_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Bank_Account_Number__c</fullName>
    <formula>IF(ISBLANK(LIA_Claim__r.Bank_Account_Number__c),&quot;-&quot;, LIA_Claim__r.Bank_Account_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Bank Account Number</label>
    <type>Text</type>
</CustomField>