sas-core/main/default/objects/Case/fields/Claim_Bank_Country__c.field-meta.xml
<CustomField>
    <fullName>Claim_Bank_Country__c</fullName>
    <formula>IF(ISBLANK(TEXT(LIA_Claim__r.Bank_Country__c)),&quot;-&quot;,TEXT(LIA_Claim__r.Bank_Country__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Bank Country</label>
    <type>Text</type>
</CustomField>