sas-core/main/default/objects/Case/fields/Claim_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Claim_Bank_Name__c</fullName>
    <formula>LIA_Claim__r.Bank_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Bank Name</label>
    <type>Text</type>
</CustomField>