sas-core/main/default/objects/Case/fields/Claim_BIC_Swift__c.field-meta.xml
<CustomField>
    <fullName>Claim_BIC_Swift__c</fullName>
    <formula>IF(ISBLANK(LIA_Claim__r.BIC_Swift__c),&quot;-&quot;, LIA_Claim__r.BIC_Swift__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim BIC/Swift</label>
    <type>Text</type>
</CustomField>