sas-core/main/default/objects/Case/fields/Claim_City__c.field-meta.xml
<CustomField>
    <fullName>Claim_City__c</fullName>
    <formula>LIA_Claim__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim City</label>
    <type>Text</type>
</CustomField>