sas-core/main/default/objects/Case/fields/Claim_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Claim_Company_Name__c</fullName>
    <formula>LIA_Claim__r.Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Company Name</label>
    <type>Text</type>
</CustomField>