sas-core/main/default/objects/Case/fields/Claim_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Claim_Contact_Name__c</fullName>
    <formula>LIA_Claim__r.Contact_First_Name__c + LIA_Claim__r.Contact_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Contact Name</label>
    <type>Text</type>
</CustomField>