sas-core/main/default/objects/Case/fields/Claim_Country__c.field-meta.xml
<CustomField>
    <fullName>Claim_Country__c</fullName>
    <formula>TEXT(LIA_Claim__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Country</label>
    <type>Text</type>
</CustomField>