sas-core/main/default/objects/Case/fields/Claim_Currency__c.field-meta.xml
<CustomField>
    <fullName>Claim_Currency__c</fullName>
    <formula>TEXT(LIA_Claim__r.Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Currency</label>
    <type>Text</type>
</CustomField>