sas-core/main/default/objects/Case/fields/Claim_Customer_s_Reference__c.field-meta.xml
<CustomField>
    <fullName>Claim_Customer_s_Reference__c</fullName>
    <formula>LIA_Claim__r.Customer_s_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Customer&apos;s Reference</label>
    <type>Text</type>
</CustomField>