sas-core/main/default/objects/Case/fields/Claim_Delay_Length__c.field-meta.xml
<CustomField>
    <fullName>Claim_Delay_Length__c</fullName>
    <formula>TEXT(LIA_Claim__r.Delay_Length__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Delay Length</label>
    <type>Text</type>
</CustomField>