sas-core/main/default/objects/Case/fields/Claim_EU261_Handling_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_EU261_Handling_Status__c</fullName>
    <formula>TEXT(LIA_Claim__r.EU261_Handling_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim EU261 Handling Status</label>
    <type>Text</type>
</CustomField>