sas-core/main/default/objects/Case/fields/Claim_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Claim_Expenses__c</fullName>
    <label>Claim Expenses</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>