sas-core/main/default/objects/Case/fields/Claim_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Phone_Number__c</fullName>
    <formula>LIA_Claim__r.Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Phone Number</label>
    <type>Text</type>
</CustomField>