sas-core/main/default/objects/Case/fields/Claim_PIR__c.field-meta.xml
<CustomField>
    <fullName>Claim_PIR__c</fullName>
    <formula>LIA_Claim__r.PIR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim PIR</label>
    <type>Text</type>
</CustomField>