sas-core/main/default/objects/Case/fields/Claim_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Claim_Postal_Code__c</fullName>
    <formula>LIA_Claim__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Postal Code</label>
    <type>Text</type>
</CustomField>