sas-core/main/default/objects/Case/fields/Claim_Preferred_Compensation_Method__c.field-meta.xml
<CustomField>
    <fullName>Claim_Preferred_Compensation_Method__c</fullName>
    <formula>TEXT(LIA_Claim__r.Preferred_Compensation_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Preferred Compensation Method</label>
    <type>Text</type>
</CustomField>