sas-core/main/default/objects/Case/fields/Claim_Purchase_Year__c.field-meta.xml
<CustomField>
    <fullName>Claim_Purchase_Year__c</fullName>
    <formula>LIA_Claim__r.Purchase_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Purchase Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>