sas-core/main/default/objects/Case/fields/Claim_Rebooked_Flights__c.field-meta.xml
<CustomField>
    <fullName>Claim_Rebooked_Flights__c</fullName>
    <label>Claim Rebooked Flights</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>