sas-core/main/default/objects/Case/fields/Claim_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Ticket_Number__c</fullName>
    <formula>LIA_Claim__r.Ticket_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Ticket Number</label>
    <type>Text</type>
</CustomField>