sas-core/main/default/objects/Case/fields/Claim_Total_Delay_To_Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>Claim_Total_Delay_To_Final_Destination__c</fullName>
    <formula>TEXT(LIA_Claim__r.Total_delay_to_final_destination__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Total Delay To Final Destination</label>
    <type>Text</type>
</CustomField>