sas-core/main/default/objects/Case/fields/Claim_Travelers__c.field-meta.xml
<CustomField>
    <fullName>Claim_Travelers__c</fullName>
    <label>Claim Travelers</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>