sas-core/main/default/objects/Case/fields/Claim_Type_Of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type_Of_Customer__c</fullName>
    <formula>TEXT(LIA_Claim__r.Type_of_Customer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Type Of Customer</label>
    <type>Text</type>
</CustomField>