sas-core/main/default/objects/Case/fields/Concerns_a_person_with_reduced_mobility__c.field-meta.xml
<CustomField>
    <fullName>Concerns_a_person_with_reduced_mobility__c</fullName>
    <description>It marks that the case is related to a reduced mobility person</description>
    <formula>LIA_Claim__r.Concerns_a_person_with_reduced_mobility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates that the claim concerns a person with special assistance needs</inlineHelpText>
    <label>Concerns a person with reduced mobility</label>
    <type>Checkbox</type>
</CustomField>