sas-core/main/default/objects/Case/fields/Concerns_an_unaccompanied_minor__c.field-meta.xml
<CustomField>
    <fullName>Concerns_an_unaccompanied_minor__c</fullName>
    <formula>LIA_Claim__r.Concerns_an_unaccompanied_minor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concerns an unaccompanied minor</label>
    <type>Checkbox</type>
</CustomField>