sas-core/main/default/objects/Case/fields/Consent__c.field-meta.xml
<CustomField>
    <fullName>Consent__c</fullName>
    <inlineHelpText>Give consent to save data</inlineHelpText>
    <label>Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>