sas-core/main/default/objects/Case/fields/Created_Support_Case__c.field-meta.xml
<CustomField>
    <fullName>Created_Support_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not a support case was created in order to solve this case</description>
    <inlineHelpText>Indicates whether or not a support case was created in order to solve this case</inlineHelpText>
    <label>Created Support Case</label>
    <type>Checkbox</type>
</CustomField>