sas-core/main/default/objects/Case/fields/Customer_Claim_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Claim_Category__c</fullName>
    <formula>TEXT(LIA_Claim__r.Customer_Claim_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Claim Category</label>
    <type>Text</type>
</CustomField>