sas-core/main/default/objects/Case/fields/Customer_Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Claim_Type__c</fullName>
    <formula>TEXT( LIA_Claim__r.Customer_Claim_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Claim Type</label>
    <type>Text</type>
</CustomField>