sas-core/main/default/objects/Case/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <formula>Claim__r.Deadline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>