sas-core/main/default/objects/Case/fields/Deposit_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Payment_Date__c</fullName>
    <label>Deposit Payment Date</label>
    <type>Date</type>
</CustomField>