sas-core/main/default/objects/Case/fields/EBLevel__c.field-meta.xml
<CustomField>
    <fullName>EBLevel__c</fullName>
    <label>EuroBonus Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <label>Base</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Silver</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Gold</label>
            </value>
			<value>
                <fullName>D</fullName>
                <label>Diamond</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Pandion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>