sas-core/main/default/objects/Case/fields/EBNumber__c.field-meta.xml
<CustomField>
    <fullName>EBNumber__c</fullName>
    <description>EuroBonus number of customer</description>
    <label>EuroBonus Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>