sas-core/main/default/objects/Case/fields/EU261_Handling_Instructions__c.field-meta.xml
<CustomField>
    <fullName>EU261_Handling_Instructions__c</fullName>
    <label>EU261 Handling Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>