sas-core/main/default/objects/Case/fields/External_Case_Number_Court_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Case_Number_Court_Reference__c</fullName>
    <formula>Claim__r.External_Case_Number_Court_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Case Number/Court Reference</label>
    <type>Text</type>
</CustomField>