sas-core/main/default/objects/Case/fields/FCS_AskedForHelp__c.field-meta.xml
<CustomField>
    <fullName>FCS_AskedForHelp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark case if question to team lead/mentor.</description>
    <label>Asked For Help</label>
    <type>Checkbox</type>
</CustomField>