sas-core/main/default/objects/Case/fields/FCS_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>FCS_Case_Reason__c</fullName>
    <complianceGroup>WipeRetain</complianceGroup>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FCS_CaseType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access rights</fullName>
            </value>
            <value>
                <fullName>Add Animals</fullName>
            </value>
            <value>
                <fullName>Add Baggage</fullName>
            </value>
            <value>
                <fullName>Add Bike</fullName>
            </value>
            <value>
                <fullName>Add Biofuel</fullName>
            </value>
            <value>
                <fullName>Add EB in Booking</fullName>
            </value>
            <value>
                <fullName>Add Golfbag</fullName>
            </value>
            <value>
                <fullName>Add Infant in Booking</fullName>
            </value>
            <value>
                <fullName>Add Meals</fullName>
            </value>
            <value>
                <fullName>Add Musical Instrument</fullName>
            </value>
            <value>
                <fullName>Add Seating</fullName>
            </value>
            <value>
                <fullName>Add Skis</fullName>
            </value>
            <value>
                <fullName>Add Special Assistance</fullName>
            </value>
            <value>
                <fullName>Add weapon</fullName>
            </value>
            <value>
                <fullName>Add Wheelchair</fullName>
            </value>
            <value>
                <fullName>Agent Helpdesk</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>AliPay</fullName>
            </value>
            <value>
                <fullName>Allowance</fullName>
            </value>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Arrival info</fullName>
            </value>
            <value>
                <fullName>Assist with check-in</fullName>
            </value>
            <value>
                <fullName>ATO Account Takeover</fullName>
            </value>
            <value>
                <fullName>Availability/Inquiry</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Baggage Content</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>